# adfampi

./: .gitignore  CMakeLists.txt  README.md
include/: activations.hpp  cifar.hpp  cifar_loader.hpp  connections.hpp  functions.hpp  hidden_layer.hpp  mnist.hpp  mnist_loader.hpp  mt64.h  output_layer.hpp  random.hpp  utils.hpp
src/: CMakeLists.txt  activations.cpp  adfa.cpp  adfa_cifar.cpp  adfa_mnist.cpp  cifar_loader.cpp  hidden_layer.cpp  mnist_loader.cpp  mt19937-64.c  output_layer.cpp  random.cpp  test_cifar.cpp  test_mnist.cpp  utils.cpp
